test/mutation_analysis/s0091_decode_ways/hafis/ablation_o3_full/mutants/12/result.txt
./test/mutation_analysis/s0091_decode_ways/hafis/ablation_o3_full/mutants/12/Solution.java:35: error: unreachable statement
        return f[n];
        ^
1 error
